ChangeLog for photo-uploader
============================

Major changes for each release are described here. Detailed changes between
two versions can be retrieved from Subversion.

0.7
=== (2009-??-??)

* Added support for happyfoto.cz.

0.6
=== (2008-03-21)

* Added support for iTesco.cz.

0.5
=== (2007-12-11)

* Added generic helper for ILikePhoto service.
* Added some error checking.
* Fixed handling of wrong parameters passed (non files).

0.4
=== (2007-11-07)

* Fixed crash.
* Added uloz.to service.

0.3
=== (2007-10-08)

* It is possible to get session ID from API.
* Added support for opening in user defined browser.
* Now parses ~/.photo-upload and uses it as defaults.
* Support for uploading to imageshack.us.

0.2
=== (2007-10-01)

* Modularize the code.
* Add support for new services.

0.1
=== (2007-09-25)

* Initial relase.
