@@ -8,6 +8,7 @@ two versions can be retrieved from Subversion.
 === (2009-??-??)
 
 * Added support for happyfoto.cz.
+* Added support for happyfoto.sk.
 
 0.6
 === (2008-03-21)
